# holoviz-skills

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pixi.toml  pyproject.toml  zensical.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
developing-with-holoviz/: SKILL.md
developing-with-holoviz/create-custom-skill-template/: SKILL.md
developing-with-holoviz/skills/datashader/: SKILL.md
developing-with-holoviz/skills/geoviews/: SKILL.md
developing-with-holoviz/skills/holoviews/: SKILL.md
developing-with-holoviz/skills/hvplot/: SKILL.md
developing-with-holoviz/skills/lumen/: SKILL.md
developing-with-holoviz/skills/panel/: SKILL.md
developing-with-holoviz/skills/panel-material-ui/: SKILL.md
developing-with-holoviz/skills/param/: SKILL.md
docs/: index.md
scripts/: build_stubs.py
