[project]
name = "holoviz-skills"
version = "0.0.0"
description = "A curated collection of Skills for the HoloViz ecosystem — Panel, hvPlot, HoloViews, Param, and more."
readme = "README.md"
license = { text = "BSD" }
requires-python = ">=3.12"
authors = [{ name = "HoloViz", email = "developers@holoviz.org" }]
maintainers = [{ name = "HoloViz", email = "developers@holoviz.org" }]

[project.urls]
Homepage = "https://holoviz-dev.github.io/holoviz-skills/"
Source = "https://github.com/holoviz-dev/holoviz-skills"
